CSS: Fix bleedthrough of bg color on BirdThumbnail border

--- a/index.css
+++ b/index.css
@@ -238,6 +238,7 @@ footer
     border: 16px solid #f3f3f3;
     box-shadow: 0 3px 5px -4px rgba(0, 0, 0, 0.6);
     z-index: 2;
+    background-color: #f3f3f3;
 }
 
 .ObservationCard > .observation-info
